--- a/index.html
+++ b/index.html
@@ -3,21 +3,21 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>KnzoStore</title>
+    <title>Creeper Host</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <header>
-        <h1>KnzoStore</h1>
+        <h1>Creeper Host</h1>
     </header>
     <main>
         <section class="product-box">
-            <h3>RESOURCE PACKS</h3>
-            <p>resource packs anda bisa membuat rspacks untuk server seperti scorehud logo atau ranks tag dan juga untuk rsapacks lainya.</p>
+            <h3>PLUGIN</h3>
+            <p>Tersedia beragam plugin seperti plugin Pocketmine dan paper</p>
             <button class="order-button">pesan</button>
         </section>
         <section class="product-box">
-            <h3>RESOURCE PACKS</h3>
+            <h3>PLUGIN</h3>
             <p>resource packs anda bisa membuat rspacks untuk server seperti scorehud logo atau ranks tag dan juga untuk rsapacks lainya.</p>
             <button class="order-button">pesan</button>
         </section>
