--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
         </section>
     </main>
     <footer>
-        <p>&copy; 2024 KnzoStore. All rights reserved.</p>
+        <p>&copy; 2024 Creeper Hos.Aman Dan Terpercaya.</p>
     </footer>
     <div id="slide-menu" class="slide-menu">
         <div class="slide-menu-content">
