--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Creeper Host</title>
+    <title>𝐂𝐫𝐞𝐞𝐩𝐞𝐫𝐇𝐨𝐬𝐭</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
@@ -29,11 +29,11 @@
         
         <section id="about-store">
             <h2>Tentang Store</h2>
-            <p>Informasi tentang store Anda...</p>
+            <p>Informas</p>
         </section>
         <section id="developer">
             <h2>Pengembang Store</h2>
-            <p>Informasi tentang pengembang store Anda...</p>
+            <p>Ibnu1102</p>
         </section>
         <section id="services">
             <h2>Layanan Store</h2>
@@ -45,7 +45,7 @@
         </section>
     </main>
     <footer>
-        <p>&copy; 2024 Creeper Hos.Aman Dan Terpercaya.</p>
+        <p>&copy; 2024 𝐂𝐫𝐞𝐞𝐩𝐞𝐫𝐇𝐨𝐬𝐭.Aman Dan Terpercaya.</p>
     </footer>
     <div id="slide-menu" class="slide-menu">
         <div class="slide-menu-content">
