--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <header>
-        <h1>Creeper Host</h1>
+        <h1>𝐂𝐫𝐞𝐞𝐩𝐞𝐫𝐇𝐨𝐬𝐭</h1>
     </header>
     <main>
         <section class="product-box">
